update create topic

--- a/src/app/modules/user/components/topic/topic.component.html
+++ b/src/app/modules/user/components/topic/topic.component.html
@@ -50,5 +50,5 @@
   </div>
 </div>
 <div>
-  <app-modal-topic [isOpenTopic]="isOpenTopic"></app-modal-topic>
+  <app-modal-topic [(isOpenTopic)]="isOpenTopic"></app-modal-topic>
 </div>
