--- a/src/app/theme/layouts/header/header.component.html
+++ b/src/app/theme/layouts/header/header.component.html
@@ -6,7 +6,7 @@
     </a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <a class="nav-item  nav-link" routerLink="/home">Home</a>
+        <a class="nav-item  nav-link" routerLink="/home">Explore</a>
         <a class="nav-item active nav-link" routerLink="/course">My courses</a>
         <a class="nav-item nav-link" routerLink="/class">Class</a>
         <a class="nav-item nav-link" routerLink="/admin" *ngIf="isAdmin">Admin</a>
