complete review word

--- a/src/app/modules/user/components/class/class.component.html
+++ b/src/app/modules/user/components/class/class.component.html
@@ -12,8 +12,8 @@
     <div class="bg-secondary exercise">
       <app-exercise></app-exercise>
     </div>
-    <div class="status-member">
-      <app-status-members></app-status-members>
-    </div>
+<!--    <div class="status-member">-->
+<!--      <app-status-members></app-status-members>-->
+<!--    </div>-->
   </div>
 </div>
