--- a/src/app/modules/user/components/course-card/course-card.component.html
+++ b/src/app/modules/user/components/course-card/course-card.component.html
@@ -1,5 +1,8 @@
 <div class="container">
   <div class="space"></div>
+  <div class="wrap-btn-course">
+    <button class="btn btn-primary">create course</button>
+  </div>
   <div class="container-simple-card">
     <div  *ngFor="let card of courseCard">
       <app-simple-card  [card] = "card">
