--- a/src/app/modules/user/components/review-word/review-word.component.html
+++ b/src/app/modules/user/components/review-word/review-word.component.html
@@ -1,5 +1,8 @@
 <div class="choose-word">
-  <div class="label-suggest">Choose the correct word</div>
+  <div style="display: flex; justify-content: space-between">
+    <div class="label-suggest">Choose the correct word</div>
+    <i (click)="closeReview()" style="font-size: 20px" class="fas fa-times"></i>
+  </div>
   <div class="wrap-word-name">
     <div class="wrap-word-name-item">
       {{wordIem?.define}}
@@ -8,7 +11,9 @@
   <div class="wrap-word-type">
     <div class="wrap-word-type-item">{{wordIem?.wordType}}</div>
   </div>
-  <div>
+  <progress-bar  [progress]="countDown" [color]="'#488aff'">
+  </progress-bar>
+  <div class="mt-4">
     <div class="wrap-word">
       <div id="answer-{{i}}" class="word-item" (click)="chooseWord($event)" *ngFor="let word of randomWordList; let i = index">
         {{word.wordEng}}
@@ -16,3 +21,4 @@
     </div>
   </div>
 </div>
+<app-complete-review-model [scored]="answerCorrect" [totalNumberWord] = "totalNumberWord" [(isOpenTopic)]="isOpenTopic"></app-complete-review-model>
