update user card

--- a/src/app/modules/user/components/class/class.component.html
+++ b/src/app/modules/user/components/class/class.component.html
@@ -5,9 +5,9 @@
       <div class="ranking">
         <app-ranking></app-ranking>
       </div>
-      <div class="member">
-        <app-member></app-member>
-      </div>
+<!--      <div class="member">-->
+<!--        <app-member></app-member>-->
+<!--      </div>-->
     </div>
     <div class="bg-secondary exercise">
       <app-exercise></app-exercise>
