--- a/src/app/modules/user/components/course-member/course-member.component.scss
+++ b/src/app/modules/user/components/course-member/course-member.component.scss
@@ -1,9 +1,7 @@
-::ng-deep app-member {
+::ng-deep app-course-member {
   .member__wrap {
     border: 1px solid gray;
     border-radius: 7px;
-    height: 100%;
-
     .title {
       font-weight: bold;
       font-size: 18px;
