--- a/src/app/modules/user/components/topic/topic.component.scss
+++ b/src/app/modules/user/components/topic/topic.component.scss
@@ -12,6 +12,10 @@
     justify-content: center;
 
   }
+  .wrap-content-topic{
+    display: flex;
+    justify-content: center;
+  }
   .wrap-topic--position{
      position: relative;
     &:hover{
