--- a/src/app/modules/user/components/simple-card/simple-card.component.scss
+++ b/src/app/modules/user/components/simple-card/simple-card.component.scss
@@ -14,6 +14,15 @@
       border-radius: 15px;
       cursor: pointer;
      }
+    .public-course{
+      margin-right: 20px;
+      border-radius: 15px;
+      width: 70px;
+      background: #ffc107;
+      font-weight: 500;
+      text-align: center;
+      font-family: 'Itim', cursive;
+    }
     }
   .btn-learn-new-word{
     padding: 5px 20px;
@@ -43,6 +52,19 @@
       align-self: center;
       margin: 0 auto;
     }
+  }
+  .btn-remove{
+    position: relative;
+    left: 24px;
+    width: 32px;
+    bottom: -14px;
+    color: white;
+    display: flex;
+    align-items: center;
+    background: red;
+    justify-content: center;
+    height: 28px;
+    border-radius: 4px 8px 2px 1px;
   }
   .wrap-card-bottom{
     margin-top: 24px;
