--- a/src/app/modules/user/components/topic/topic.component.html
+++ b/src/app/modules/user/components/topic/topic.component.html
@@ -1,51 +1,57 @@
+
 <div class="wrap-topic">
   <div class="space-height"></div>
-  <div class="card-header-topic">
-    <div class="course-name">{{course?.course.courseName}}</div>
-    <div class="progress-topics-score"><span class="score-achieved">{{course.wordLearned}}</span>/<span style="font-weight: bold"> {{course.totalWord}}</span>
-      <span> words learned</span>
-    </div>
-    <div class="mb-4">
-      <progress-bar class="progress-topics" [progress]="progress">
-      </progress-bar>
-    </div>
-    <div class="d-flex">
-      <div (click)="onReviewWord()" class="review-word">
-        Review<span>({{course.wordLearned}})</span>
-        <i class="ml-2 fas fa-wand-magic"></i>
-      </div>
-    </div>
-  </div>
-  <div class="wrap-topic-container">
-    <div  *ngIf="!!isEdit" class="wrap-topic-item " (click)="openModalTopic()">
-      <div class="inner-topic-container">
-        <div class="wrap-number-topic">
-          <div class="wrap-number-topic-item">0</div>
+  <div class="wrap-content-topic">
+    <div class="mr-5">
+      <div class="card-header-topic">
+        <div class="course-name">{{course?.course.courseName}}</div>
+        <div class="progress-topics-score"><span class="score-achieved">{{course.wordLearned}}</span>/<span style="font-weight: bold"> {{course.totalWord}}</span>
+          <span> words learned</span>
         </div>
-        <i style="font-size: 80px" class="fas fa-plus-circle"></i>
-        <div style="font-weight: 600; margin-bottom: 5px">Add new topic</div>
+        <div class="mb-4">
+          <progress-bar class="progress-topics" [progress]="progress">
+          </progress-bar>
+        </div>
+        <div class="d-flex">
+          <div (click)="onReviewWord()" class="review-word">
+            Review<span>({{course.wordLearned}})</span>
+            <i class="ml-2 fas fa-wand-magic"></i>
+          </div>
+        </div>
       </div>
-    </div>
-    <div *ngFor="let topic of topics; let indexNumber = index">
-      <div class="wrap-topic-item wrap-topic--position ">
+      <div class="wrap-topic-container">
+        <div  *ngIf="!!isEdit" class="wrap-topic-item " (click)="openModalTopic()">
+          <div class="inner-topic-container">
+            <div class="wrap-number-topic">
+              <div class="wrap-number-topic-item">0</div>
+            </div>
+            <i style="font-size: 80px" class="fas fa-plus-circle"></i>
+            <div style="font-weight: 600; margin-bottom: 5px">Add new topic</div>
+          </div>
+        </div>
+        <div *ngFor="let topic of topics; let indexNumber = index">
+          <div class="wrap-topic-item wrap-topic--position ">
         <span *ngIf="!!isEdit" class="wrap-eraser-icon" (click)="onRemoveTopic(topic, indexNumber)">
           <i class="fas fa-eraser"></i>
         </span>
-        <div (click)="goToListWord(topic.topic.id)" [ngClass]="topic.status?'topic-bg-success':''" class="inner-topic-container">
-          <div class="wrap-number-topic">
-            <div class="wrap-number-topic-item">{{indexNumber+1}}</div>
+            <div (click)="goToListWord(topic.topic.id)" [ngClass]="topic.status?'topic-bg-success':''" class="inner-topic-container">
+              <div class="wrap-number-topic">
+                <div class="wrap-number-topic-item">{{indexNumber+1}}</div>
+              </div>
+              <div *ngIf="!topic.status ; else isComplete" class="topic-item-icon">
+                <i class="fa fa-graduation-cap" aria-hidden="true" style="font-size:60px"></i>
+              </div>
+              <ng-template #isComplete>
+                <i class="fas fa-flower-daffodil topic-icon-success"></i>
+                <i class="fas fa-check topic-icon-check" aria-hidden="true" style="font-size:30px"></i>
+              </ng-template>
+              <div [ngClass]="topic.status?'topic-item-name-success':''" class="topic-item-name">{{topic.topic.topicName}}</div>
+            </div>
           </div>
-          <div *ngIf="!topic.status ; else isComplete" class="topic-item-icon">
-            <i class="fa fa-graduation-cap" aria-hidden="true" style="font-size:60px"></i>
-          </div>
-          <ng-template #isComplete>
-            <i class="fas fa-flower-daffodil topic-icon-success"></i>
-            <i class="fas fa-check topic-icon-check" aria-hidden="true" style="font-size:30px"></i>
-          </ng-template>
-          <div [ngClass]="topic.status?'topic-item-name-success':''" class="topic-item-name">{{topic.topic.topicName}}</div>
         </div>
       </div>
     </div>
+    <app-course-member></app-course-member>
   </div>
 </div>
 <div>
