--- a/src/app/modules/user/components/course-card/course-card.component.scss
+++ b/src/app/modules/user/components/course-card/course-card.component.scss
@@ -1,4 +1,5 @@
 ::ng-deep app-course-card {
+  font-family: 'Itim', cursive;
   .space {
     padding-top: 20px;
   }
@@ -12,6 +13,10 @@
       width: 80px;
       height: 80px;
     }
+    .btn-add-course{
+      background-color: #037588 !important;
+      border-color: #037588 !important;
+    }
     .new-card-course{
       padding: 10px;
       display: flex;
@@ -22,6 +27,14 @@
       position: absolute;
       bottom: 0;
       right: 0;
+    }
+    .status-course{
+      background: #ffc107;
+      padding: 5px;
+      border-radius: 10px;
+      margin-left: 10px;
+      cursor: pointer;
+      font-family: 'Itim', cursive;
     }
   }
   .learn-word {
