--- a/src/app/modules/user/components/course-member/course-member.component.scss
+++ b/src/app/modules/user/components/course-member/course-member.component.scss
@@ -1,6 +1,7 @@
 ::ng-deep app-course-member {
+  font-family: 'Itim', cursive;
   .member__wrap {
-    border: 1px solid gray;
+    box-shadow: 0px 1px 11px -4px rgb(0 0 0 / 43%);
     border-radius: 7px;
     .title {
       font-weight: bold;
