--- a/src/app/modules/user/components/simple-card/simple-card.component.scss
+++ b/src/app/modules/user/components/simple-card/simple-card.component.scss
@@ -1,4 +1,5 @@
 .learn-word{
+  font-family: 'Itim', cursive;
  margin: 20px auto 20px auto;
   max-width: 750px;
   cursor: pointer;
@@ -128,12 +129,20 @@
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 80%;
+  width: 500px;
+  height: 400px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
+  .btn-setting-daily{
+    padding: 20px 25px;
+    margin: 10px auto;
+    box-shadow: 0 0px 6px 0 rgb(0 0 0 / 20%);
+    border-radius: 5px;
+    width: 460px;
+  }
 }
 
 /* Add Animation */
@@ -164,14 +173,18 @@
 
 .modal-header {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #037588;
   color: white;
 }
 
-.modal-body {padding: 2px 16px;}
+.modal-body {padding: 2px 16px;
+display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #037588;
   color: white;
 }
