--- a/src/app/modules/user/components/topic/topic.component.html
+++ b/src/app/modules/user/components/topic/topic.component.html
@@ -4,7 +4,7 @@
   <div class="wrap-content-topic">
     <div class="mr-5">
       <div class="card-header-topic">
-        <div class="course-name">{{course?.course.courseName}}</div>
+        <div class="course-name">{{course?.course.courseName| titlecase}}</div>
         <div class="progress-topics-score"><span class="score-achieved">{{course.wordLearned}}</span>/<span style="font-weight: bold"> {{course.totalWord}}</span>
           <span> words learned</span>
         </div>
@@ -32,7 +32,7 @@
         <div *ngFor="let topic of topics; let indexNumber = index">
           <div class="wrap-topic-item wrap-topic--position ">
         <span *ngIf="!!isEdit" class="wrap-eraser-icon" (click)="onRemoveTopic(topic, indexNumber)">
-          <i class="fas fa-eraser"></i>
+            <i class="fas fa-trash"></i>
         </span>
             <div (click)="goToListWord(topic.topic.id)" [ngClass]="topic.status?'topic-bg-success':''" class="inner-topic-container">
               <div class="wrap-number-topic">
@@ -51,7 +51,9 @@
         </div>
       </div>
     </div>
-    <app-course-member></app-course-member>
+    <ng-container *ngIf="isEdit">
+      <app-course-member></app-course-member>
+    </ng-container>
   </div>
 </div>
 <div>
