--- a/src/app/modules/user/components/topic/topic.component.scss
+++ b/src/app/modules/user/components/topic/topic.component.scss
@@ -1,4 +1,5 @@
 .wrap-topic {
+  font-family: 'Itim', cursive;
   background-color: #fcfcfc;
   height: 100vh;
   .space-height{
@@ -115,6 +116,7 @@
   .course-name{
     margin-bottom: 15px;
     font-weight: 500;
+    font-size: 20px;
   }
   .review-word{
     padding: 5px 25px;
