--- a/src/app/theme/components/complete-review-model/complete-review-model.component.scss
+++ b/src/app/theme/components/complete-review-model/complete-review-model.component.scss
@@ -1,97 +1,100 @@
-.modal-cus {
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
+::ng-deep app-complete-review-model{
+  font-family: 'Itim', cursive;
+  .modal-cus {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  }
 
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  border: 1px solid #888;
-  //min-width: 800px;
-  max-width: 800px;
-  height: 600px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
-  animation-name: animatetop;
-  animation-duration: 0.4s
-}
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    //min-width: 800px;
+    max-width: 800px;
+    height: 600px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
 
-/* Add Animation */
-@-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
-}
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
 
-@keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
-}
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
 
-/* The Close Button */
-.close {
-  color: white;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
-.modal-header {
-  padding: 2px 16px;
-  background-color: #117a8b;
-  color: white;
-}
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #117a8b;
+    color: white;
+  }
 
-.modal-body {
-  padding: 2px 16px;
-  height:  600px;
-  .wrap-score-review{
-    margin-top: 10px;
-    display: flex;
-    font-size: 24px;
-    justify-content: center;
-    align-items: center;
-    font-weight: 600;
-    font-family: 'Itim', cursive;
-    font-size: 35px;
-    i{
-     color: #0d7324;
-      margin-left: 5px;
+  .modal-body {
+    padding: 2px 16px;
+    height:  600px;
+    .wrap-score-review{
+      margin-top: 10px;
+      display: flex;
+      font-size: 24px;
+      justify-content: center;
+      align-items: center;
+      font-weight: 600;
+      font-family: 'Itim', cursive;
+      font-size: 35px;
+      i{
+        color: #0d7324;
+        margin-left: 5px;
+      }
+    }
+    .wrap-icon-finish{
+      display: flex;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+    .icon-finish{
+      font-size: 180px;
+      color: #117a8b;
     }
   }
-  .wrap-icon-finish{
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-  }
-  .icon-finish{
-    font-size: 180px;
-    color: #117a8b;
-  }
-}
 
-.modal-footer {
-  padding: 5px 16px;
-  height: 50px;
-  background-color: #117a8b;
-  color: white;
+  .modal-footer {
+    padding: 5px 16px;
+    height: 50px;
+    background-color: #117a8b;
+    color: white;
+  }
 }
