--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!--<div>-->
 <!--    <router-outlet></router-outlet>-->
 <!--</div>-->
-
+<!-- header -->
 <app-default-layout *ngIf="!!isLogged; else unAuthorized"></app-default-layout>
 <ng-template #unAuthorized>
   <router-outlet></router-outlet>
