--- a/src/app/modules/user/components/simple-card/simple-card.component.scss
+++ b/src/app/modules/user/components/simple-card/simple-card.component.scss
@@ -184,7 +184,8 @@ display: flex;
 }
 
 .modal-footer {
-  padding: 2px 16px;
   background-color: #037588;
   color: white;
+  height: 43px;
+  border-radius: 0px 0px 5px 5px;
 }
