--- a/src/app/modules/user/components/course-card/course-card.component.html
+++ b/src/app/modules/user/components/course-card/course-card.component.html
@@ -1,66 +1,74 @@
-<div class="container">
+<ng-container *ngIf="isDisplay">
+  <app-toastr (option)="onSelectOption($event)"></app-toastr>
+</ng-container>
+<div class="course-container">
   <div class="space"></div>
-  <div *ngIf="courseCard.length>0; else loading">
-    <div class="wrap-new-course">
-      <button (click)="isCreatCourse = true " class="btn btn-add-course btn-primary">create course</button>
-      <div class="space"></div>
-      <div *ngIf="isCreatCourse" class="new-card-course">
-        <div class="d-flex">
-          <img
-            class="img-course"
-            src="{{newCourse.imgUrl}}"
-            alt="avt">
-          <div class="ml-2">
-            <div>
-              <div>Input course mame</div>
-              <input [(ngModel)]="newCourse.courseName">
-              <span (click)="newCourse.isPublish = !newCourse.isPublish" class="status-course">
-              {{newCourse.isPublish? "public" : "private"}}
+  <div class="wrap-course-content">
+    <app-rank></app-rank>
+    <div class="wrap-mid-content" *ngIf="courseCard.length>0; else loading">
+      <div class="wrap-course-item">
+        <button (click)="isCreatCourse = true " class="btn btn-add-course btn-primary">create course</button>
+        <div class="space"></div>
+        <div *ngIf="isCreatCourse" class="new-card-course">
+          <div class="d-flex">
+            <img
+              class="img-course"
+              src="{{newCourse.imgUrl}}"
+              alt="avt">
+            <div class="ml-2">
+              <div>
+                <div>Input course mame</div>
+                <input [(ngModel)]="newCourse.courseName">
+                <span (click)="newCourse.isPublish = !newCourse.isPublish" class="status-course">
+              {{newCourse.isPublish ? "public" : "private"}}
             </span>
-            </div>
-            <div class="mt-3">Choose image</div>
-            <input
-              class="choose-img"
-              #imageInput
-              type="file"
-              accept="image/*"
-              (change)="processFile(imageInput)">
-            <div *ngIf="selectedFile" class="img-preview-container">
+              </div>
+              <div class="mt-3">Choose image</div>
+              <input
+                class="choose-img"
+                #imageInput
+                type="file"
+                accept="image/*"
+                (change)="processFile(imageInput)">
+              <div *ngIf="selectedFile" class="img-preview-container">
 
-              <div class="img-preview{{selectedFile.status === 'fail' ? '-error' : ''}}"
-                   [ngStyle]="{'background-image': 'url('+ selectedFile.src + ')'}">
+                <div class="img-preview{{selectedFile.status === 'fail' ? '-error' : ''}}"
+                     [ngStyle]="{'background-image': 'url('+ selectedFile.src + ')'}">
+                </div>
+
+                <div *ngIf="selectedFile.pending" class="img-loading-overlay">
+                  <div class="img-spinning-circle"></div>
+                </div>
+
+                <div *ngIf="selectedFile.status === 'ok'" class="alert alert-success"> Image Uploaded Succesfuly!</div>
+                <div *ngIf="selectedFile.status === 'fail'" class="alert alert-danger"> Image Upload Failed!</div>
               </div>
 
-              <div *ngIf="selectedFile.pending" class="img-loading-overlay">
-                <div class="img-spinning-circle"></div>
-              </div>
-
-              <div *ngIf="selectedFile.status === 'ok'" class="alert alert-success"> Image Uploaded Succesfuly!</div>
-              <div *ngIf="selectedFile.status === 'fail'" class="alert alert-danger"> Image Upload Failed!</div>
             </div>
-
           </div>
-        </div>
-        <div class="d-lex" style="position: relative">
-        <span  (click)="isCreatCourse = false ">
+          <div class="d-lex" style="position: relative">
+        <span (click)="isCreatCourse = false ">
             <i class="fas fa-times"></i>
         </span>
-          <button (click)="createCourse()" class="btn btn-create-course btn-primary">Create</button>
-        </div>
+            <button (click)="createCourse()" class="btn btn-create-course btn-primary">Create</button>
+          </div>
 
+        </div>
+      </div>
+      <div class="container-simple-card">
+        <div *ngFor="let card of courseCard">
+          <app-simple-card (onRemoveEvent)="onHandleRemoveCourse($event)" [card]="card">
+          </app-simple-card>
+        </div>
       </div>
     </div>
-
-    <div class="container-simple-card">
-      <div *ngFor="let card of courseCard">
-        <app-simple-card (onRemoveEvent)="onHandleRemoveCourse($event)" [card]="card">
-        </app-simple-card>
-      </div>
+    <div class="competition">
+      <button class="btn btn-primary" (click)="sendmessage()">send <i class="fas fa-dragon"></i></button>
     </div>
   </div>
-  <ng-template #loading>
-    <div class="spinner-border" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-  </ng-template>
 </div>
+<ng-template #loading>
+  <div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+</ng-template>
