--- a/src/app/modules/user/components/home/home.component.scss
+++ b/src/app/modules/user/components/home/home.component.scss
@@ -14,7 +14,9 @@
       box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 43%);
       border-radius: 10px;
       padding: 10px;
-
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       &-header {
         display: flex;
 
