--- a/src/app/modules/user/components/topic/topic.component.scss
+++ b/src/app/modules/user/components/topic/topic.component.scss
@@ -27,8 +27,12 @@
     .wrap-eraser-icon{
       position: absolute;
       top: 1px;
-      right: 5px;
-      color: red;
+      right: 0px;
+      font-size: 10px;
+      border-radius: 0px 0px 0px 7px;
+      color: #f8f9fa;
+      padding: 4px;
+      background: red;
       display: none;
       i{
         &:hover{
